<resources>
    <string name="app_name">EcoTong</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="intro1">Finding trash</string>
    <string name="intro2">Taking a picture of the material</string>
    <string name="intro3">Getting recommendations</string>
    <string name="intro4">Recycling and making a profit</string>
    <string name="intro5">Join us to save the planet</string>
    <string name="go_next">Go next</string>

    <string name="slogan">Small Steps, Big Impact</string>
    <string name="welcome_to">Welcome to EcoTong!</string>
    <string name="welcome_back">Welcome back!</string>
    <string name="asking1">Don’t have an account?</string>
    <string name="asking2">Have an account?</string>
    <string name="signup">Sign up</string>
    <string name="login">Login</string>
    <string name="google1">Sign up with Google</string>
    <string name="google2">Login with Google</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>

    <string name="active_quest">Active Quest</string>
    <string name="show_more">Show more</string>
    <string name="posts">Posts</string>
    <string name="invalid_email_format">Invalid email format</string>
    <string name="please_fill_out_this_field">Please fill out this field</string>
    <string name="minimum_password">Password must contains at least 8 characters</string>
    <string name="confirmation_password_does_not_match">Confirmation password does not match</string>
    <string name="hi_user">Hi, %1$s!</string>
    <string name="login_with_google">Login with Google</string>
    <string name="start">Start</string>
    <string name="invalid_email_or_password">Invalid email or password</string>
    <string name="an_unexpected_error_has_occurred">An unexpected error has occurred</string>
    <string name="email_already_taken">Email already taken</string>
    <string name="username_already_taken">Username already taken</string>
    <string name="or">OR</string>
    <string name="add_a_picture">Add a Picture</string>
    <string name="please_choose_an_image">Please choose an image</string>
    <string name="upload_post_successful">Upload post successful</string>
    <string name="upload_post">Upload post</string>
    <string name="unable_to_identify_object">Unable to identify object</string>
</resources>